--- a/database/config/config.json
+++ b/database/config/config.json
@@ -3,5 +3,10 @@
     "database": "task_database",
     "host": "127.0.0.1",
     "dialect": "postgres"
+  },
+  "test": {
+    "database": "task_database",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
   }
 }
